style: move the find-widget in the sql editor to prevent overlapping with the suggest ai button

--- a/apps/studio/styles/monaco.scss
+++ b/apps/studio/styles/monaco.scss
@@ -47,6 +47,10 @@ span.th.tr.td.textarea {
   cursor: inherit;
 }
 
+.find-widget {
+  margin-right: 30px;
+}
+
 .grid-monaco-editor,
 .monaco-editor .suggest-widget {
   .main {
